Add remaining 2021 posts

--- a/content/articles/55.azfuncuni-lesson-tips.md
+++ b/content/articles/55.azfuncuni-lesson-tips.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - Lesson Tips
-tags: serverless azure functions
+cover: /articles/2021/55.AzureFunctionsUniversity_Lesson_Tips.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2021-05-19
+title: "Azure Functions University - Lesson Tips"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2021/05/19/AzureFunctionsUniversity_Lesson_Tips.png" alt="Lesson Tips">
+![Lesson Tips](/articles/2021/55.AzureFunctionsUniversity_Lesson_Tips.png)
 
 Hi serverless friends, since the amount of Azure Functions University content is growing rapidly, I've made a video on how you can get started with Azure Functions University.
-
-<!--more-->
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xJEi8Mofp0A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
