--- a/content/articles/56.azfuncuni-blob-lesson-typescript.md
+++ b/content/articles/56.azfuncuni-blob-lesson-typescript.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - Blob Lesson (TypeScript)
-tags: serverless azure functions
+cover: /articles/2021/56.AzureFunctionsUniversity_Blob_Lesson_typescript.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2021-09-03
+title: "Azure Functions University - Blob Lesson (TypeScript)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2021/09/03/AzureFunctionsUniversity_Blob_Lesson_typescript.png" alt="Blob Lesson TypeScript">
+![Blob Lesson TypeScript](/articles/2021/56.AzureFunctionsUniversity_Blob_Lesson_typescript.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to use the Blob trigger & bindings in Azure Functions written in TypeScript.
-
-<!--more-->
 
 ## Lesson
 
