--- a/content/articles/54.azfuncuni-http-lesson-powershell.md
+++ b/content/articles/54.azfuncuni-http-lesson-powershell.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - HTTP Lesson (PowerShell)
-tags: serverless azure functions
+cover: /articles/2021/54.AzureFunctionsUniversity_HTTP_Lesson_PowerShell.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2021-05-08
+title: "Azure Functions University - HTTP Lesson (PowerShell)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2021/05/08/AzureFunctionsUniversity_HTTP_Lesson_PowerShell.png" alt="Http Lesson PowerShell">
+![Http Lesson PowerShell](/articles/2021/54.AzureFunctionsUniversity_HTTP_Lesson_PowerShell.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to use the HTTP trigger in Azure Functions written in PowerShell.
-
-<!--more-->
 
 ## Lesson
 
