--- a/content/articles/57.azfuncuni-http-lesson-powershell-portal.md
+++ b/content/articles/57.azfuncuni-http-lesson-powershell-portal.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - HTTP Lesson (PowerShell via Portal)
-tags: serverless azure functions
+cover: /articles/2021/57.AzureFunctionsUniversity_HTTP_Lesson_PowerShell.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2021-10-24
+title: "Azure Functions University - HTTP Lesson (PowerShell via Portal)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2021/10/24/AzureFunctionsUniversity_HTTP_Lesson_PowerShell.png" alt="Http Lesson PowerShell">
+![Http Lesson PowerShell](/articles/2021/57.AzureFunctionsUniversity_HTTP_Lesson_PowerShell.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to use the HTTP trigger in PowerShell Azure Functions in the Azure Portal.
-
-<!--more-->
 
 ## Lesson
 
