--- a/content/articles/58.azfuncuni-http-lesson-python.md
+++ b/content/articles/58.azfuncuni-http-lesson-python.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - HTTP Lesson (Python)
-tags: serverless azure functions
+cover: /articles/2021/58.AzureFunctionsUniversity_HTTP_Lesson_python.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2021-12-10
+title: "Azure Functions University - HTTP Lesson (Python)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2021/12/10/AzureFunctionsUniversity_HTTP_Lesson_python.png" alt="Http Lesson Python">
+![Http Lesson Python](/articles/2021/58.AzureFunctionsUniversity_HTTP_Lesson_python.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to use the HTTP trigger in Azure Functions written in Python.
-
-<!--more-->
 
 ## Lesson
 
