--- a/content/articles/59.azfuncuni-http-lesson-dotnet6.md
+++ b/content/articles/59.azfuncuni-http-lesson-dotnet6.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - HTTP Lesson (.NET 6)
-tags: serverless azure functions
+cover: /articles/2022/59.AzureFunctionsUniversity_HTTP_Lesson_dotnet6.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2022-01-03
+title: "Azure Functions University - HTTP Lesson (.NET 6)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/01/03/AzureFunctionsUniversity_HTTP_Lesson_dotnet6.png" alt="Http Lesson .NET 6">
+![Http Lesson .NET 6](/articles/2022/59.AzureFunctionsUniversity_HTTP_Lesson_dotnet6.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to use the HTTP trigger in Azure Functions written in .NET 6.
-
-<!--more-->
 
 ## Lesson
 
