--- a/content/articles/60.azfuncuni-callingrestapis-lesson-dotnet6.md
+++ b/content/articles/60.azfuncuni-callingrestapis-lesson-dotnet6.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - Calling third-party REST APIs (.NET 6)
-tags: serverless azure functions
+cover: /articles/2022/60.AzureFunctionsUniversity_Calling3rdpartyRESTAPIs_dotnet6.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2022-02-13
+title: "Azure Functions University - Calling third-party REST APIs (.NET 6)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/02/13/AzureFunctionsUniversity_Calling3rdpartyRESTAPIs_dotnet6.png" alt="Calling third-party REST APIs .NET 6">
+![Calling third-party REST APIs .NET 6](/articles/2022/60.AzureFunctionsUniversity_Calling3rdpartyRESTAPIs_dotnet6.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to call 3rd party REST APIs in Azure Functions written in .NET 6.
-
-<!--more-->
 
 ## Lesson
 
