--- a/content/articles/62.azfuncuni-deployment-lesson-dotnet6.md
+++ b/content/articles/62.azfuncuni-deployment-lesson-dotnet6.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - Deployment Lesson (.NET 6)
-tags: serverless azure functions
+cover: /articles/2022/62.AzureFunctionsUniversity_Deployment_Lesson_NET6.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2022-03-15
+title: "Azure Functions University - Deployment Lesson (.NET 6)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/03/15/AzureFunctionsUniversity_Deployment_Lesson_NET6.png" alt="Deployment Lesson .NET 6">
+![Deployment Lesson .NET 6](/articles/2022/62.AzureFunctionsUniversity_Deployment_Lesson_NET6.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to deploy Azure Functions written in .NET 6.
-
-<!--more-->
 
 ## Lesson
 
