--- a/content/articles/63.one-year-at-ably-as-developer-advocate.md
+++ b/content/articles/63.one-year-at-ably-as-developer-advocate.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: One year at Ably as a Developer Advocate
-tags: 
+cover: /articles/2022/63.1.DevRel_team_marc_selected.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2022-11-02
+title: "One year at Ably as a Developer Advocate"
+description:
+layout: article
 ---
 
 It has been one year since I've joined the DevRel team at Ably as Sr Developer Advocate. In this post I'll highlight some things I've been working on and what I've learned in the past year. I'll cover content creation, developer tooling, events, roadmap & predictability, communication & relationships, and finally 'anything that could be improved'.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/11/02/DevRel_team_marc_selected.png" alt="Ably DevRel team">
-
-<!--more-->
+![Ably DevRel team](/articles/2022/63.1.DevRel_team_marc_selected.png)
 
 ## Content creation
 
@@ -24,7 +28,7 @@ Here's a list with all the demos I've created so far, including related content 
 
 A playful web app for remote poker planning. The clients publish their votes and actions to Ably, and Ably pushes the updates to the subscribed clients.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/11/02/agileflush_screenshot.png" alt="Agile Flush web app">
+![Agile Flush web app](/articles/2022/63.2.agileflush_screenshot.png)
 
 - [Blog post](https://ably.com/blog/tutorial-vuejs-nodejs-azure-static-web-apps)
 - [Video](https://www.youtube.com/watch?v=59BZCQuRRkM)
@@ -37,7 +41,7 @@ A playful web app for remote poker planning. The clients publish their votes and
 
 The demo is a .NET 6 console application that can publish or subscribe to messages which get delivered through Ably. The blog post also covers the basics what pub/sub is, the typical use cases, and benefits.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/11/02/console_chat.gif" alt="Console Chat">
+![Console Chat](/articles/2022/63.3.console_chat.gif)
 
 - [Blog post](https://ably.com/blog/use-pub-sub-to-build-a-chat-app-with-csharp-net)
 - [GitHub repo](https://github.com/ably-labs/pubsub-demo-dotnet)
@@ -46,7 +50,7 @@ The demo is a .NET 6 console application that can publish or subscribe to messag
 
 A turn-based mini game with with real-time aspects build on Azure Functions, Durable Functions, and Ably.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/11/02/serverless-websockets-play.gif" alt="Serverless WebSockets Quest">
+![Serverless WebSockets Quest](/articles/2022/63.4.serverless-websockets-play.gif)
 
 - [Blog post](https://ably.com/blog/quest-for-serverless-websockets-azure-functions-adventure)
 - [Video](https://www.youtube.com/watch?v=KHzdc3USFU4)
@@ -61,7 +65,7 @@ A collaborative pixelart drawing canvas. Multiple users draw on a canvas, and th
 
 I created two versions of this demo, one using Ably, and one using Azure Web PubSub, and did a write-up about difference in developer experience between the two services.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/11/02/collaborative-pixelart-drawing.gif" alt="Collaborative Pixelart Drawing">
+![Collaborative Pixelart Drawing](/articles/2022/63.5.collaborative-pixelart-drawing.gif)
 
 - [Blog post](https://ably.com/blog/cloud-pubsub-services-compared-azure-web-pubsub-ably)
 - [Video](https://www.youtube.com/watch?v=sPgHwm3-yiM)
@@ -74,7 +78,7 @@ I created two versions of this demo, one using Ably, and one using Azure Web Pub
 
 A demo that visualizes the real-time progress of a serverless workflow that is built with Durable Functions. I really had a lot of fun creating the pizza-themed visuals for this demo.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/11/02/pizza-workflow.gif" alt="Serverless Pizza Workflow Visualizer">
+![Serverless Pizza Workflow Visualizer](/articles/2022/63.6.pizza-workflow.gif)
 
 - [Blog post](https://ably.com/blog/visualize-azure-serverless-workflow-progress-in-realtime-with-pubsub)
 - [Video](https://www.youtube.com/watch?v=y9-a_ewgWCQ)
@@ -91,7 +95,7 @@ I **really** like improving the developer experience from a tooling perspective.
 
 Since most of my demos require a new Ably App, I created a GitHub action that creates an app from a GitHub workflow. The action also enables the the creation of an API key with a configurable set of capabilities. This was the first time I've created a GitHub action, which was a great learning experience for me. The action has a limited feature set, but I intend to add more features in the future.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/11/02/ably-control-api-action.png" alt="List Control API GitHub Action">
+![Ably Control API GitHub Action](/articles/2022/63.7.ably-control-api-action.png)
 
 - [Blog post](https://ably.com/blog/infrastructure-as-code-ably-control-api-github-action)
 - [Video](https://www.youtube.com/watch?v=b7GE39JaM3M)
@@ -104,7 +108,7 @@ Since most of my demos require a new Ably App, I created a GitHub action that cr
 
 During the first Ably Innovation Days, I proposed to create a VSCode extension that allows developers to manage their Ably apps directly from VSCode. I formed a team with several colleagues, and in two days we had a working prototype that lists all the Ably apps in the activity bar, and creates a new Ably app via the command palette. We won the *Ship It 🚢* award with this prototype, which allowed me to continue working on the extension and release it to the VSCode extension marketplace.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/11/02/vscode-ably-applist.gif" alt="List Ably Apps">
+![List Ably Apps](/articles/2022/63.8.vscode-ably-applist.gif)
 
 - [Blog post](https://ably.com/blog/announcing-the-ably-vs-code-extension)
 - [Video](https://www.youtube.com/watch?v=3CPHb_kn1-o)
@@ -117,7 +121,7 @@ During the first Ably Innovation Days, I proposed to create a VSCode extension t
 
 During the second Ably Innovation Days, I started working on specifications for an Ably CLI. After the first day [Phil](https://twitter.com/leggetter) and I started with a prototype based on [oclif](https://oclif.io/). We managed to create a working prototype in a day that lists Ably apps, and creates a new Ably app. This project is still Work In Progress. Once the CLI is in a releasable state, I'll create some content around this.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/11/02/ably-cli.png" alt="Ably CLI: List Ably Apps">
+![Ably CLI: List Ably Apps](/articles/2022/63.9.ably-cli.png)
 
 - [GitHub repo](https://github.com/ably-labs/ably-cli)
 
@@ -125,7 +129,7 @@ During the second Ably Innovation Days, I started working on specifications for 
 
 I had the opportunity to speak at several conferences and meetups this year, both online and in-person. It was great to attend in-person events again, networking with other people, seeing people respond to your talk, and people asking questions afterwards. I'm still a proponent of online (or hybrid) events as well though. Online events can be more accessible, and allow for a more diverse audience.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/11/02/dotnetdaysro_speaking.jpg" alt="Speaking at dotnetdays Romania">
+![Speaking at dotnetdays Romania](/articles/2022/63.10.dotnetdaysro_speaking.jpg)
 
 Events I spoke at:
 
