--- a/content/6.about.md
+++ b/content/6.about.md
@@ -3,11 +3,11 @@ title: About
 layout: default
 ---
 
-## Speaker Bio
+## Bio
 
-Marc is a Sr Developer Advocate at Diagrid with a strong focus on event-driven architectures in the cloud. He loves helping developers to achieve more every day.
+Marc is a Sr Developer Advocate at [Diagrid](https://diagrid.io) with a strong focus on event-driven architectures in the cloud. He loves helping developers to achieve more every day.
 
-You might have seen Marc at a developer meetup or conference since he's a regular speaker in the area of Dapr, Azure cloud, and serverless technologies. He started Azure Functions University, a free and open source learning curriculum on GitHub, where everyone can learn about Azure Functions at their own pace. From 2019 to 2023 Marc received the Microsoft Azure MVP award for his community contributions.
+You might have seen Marc at a developer meetup or conference since he's a regular speaker in the area of Dapr, Azure cloud, and serverless technologies. He started [Azure Functions University](https://github.com/marcduiker/azure-functions-university), a free and open source learning curriculum on GitHub, where everyone can learn about Azure Functions at their own pace. From 2019 to 2023 Marc received the Microsoft Azure MVP award for his community contributions.
 
 In his spare time, Marc likes to give attention to the creative part of his brain. He likes to create pixel art (check out VSCode Pets), code visuals & music, and an occasional retro game.
 
