Update home page

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -51,7 +51,8 @@ Things I love doing
 
 ### //TODO
 
-- [ ] Migrate blog posts (in progress)
+- [X] Migrate blog posts (in progress)
+- [ ] Add graphics
 - [ ] Add page on DevEx
 - [X] Add page on pixel art
 - [X] Add page on creative coding
