--- a/content/articles/115.devrelcon-london-2023.md
+++ b/content/articles/115.devrelcon-london-2023.md
@@ -33,10 +33,10 @@ There was a surprising large Dutch devrel delegation, some I've never met before
 The main reason I went to this conference is to (re)connect with the wonderful people in Developer Relations.
 Don't get me wrong, the talks are good. I've learned quite a bit about:
 
-- Developer education (🙏 Sue Smith)
-- Cracking complext community problems (🙏 Richard Millington)
-- Communication design (🙏 Melinda Seckington)
-- Quantifying devrel impact (🙏 Kevin Lewis and John Booth).
+- Developer education (Sue Smith)
+- Cracking complext community problems (Richard Millington)
+- Communication design (Melinda Seckington)
+- Quantifying devrel impact (Kevin Lewis and John Booth).
 
 There were many more talks, and a devrel unconference at the same time. It was too much to follow everything 🤯.
 As our industry is relatively young and not well-defined, I'm very appreciative of everyone who is sharing their knowledge and experience. You are helping us all to grow up (this is a hot topic lately).
@@ -44,3 +44,18 @@ As our industry is relatively young and not well-defined, I'm very appreciative 
 I got a lot of good energy from attending this conference and meeting everyone in person 🤗. I hope a new edition of DevRelCon will happen in 2024. I will be there for sure!
 
 _(Also...[let me know](https://ko-fi.com/marcduiker/commissions) if you need a pixel-art style logo for your conference 😉)_
+
+![DevRelCon opening by Matthew and Kevin](/articles/2023/115.2.devrelcon_opening.jpg)
+_Matthew and Kevin opening the conference_
+
+![DevRelCon keynote by Wesley](/articles/2023/115.3.devrelcon_wesley.jpg)
+_Wesley Faulkner giving the keynote_
+
+![DevRelCon session by Sue Smith](/articles/2023/115.4.devrelcon_sue.jpg)
+_Sue Smith: An open framework for developer learning_
+
+![DevRelCon session by Kevin and John](/articles/2023/115.5.devrelcon_kevin.jpg)
+_Kevin Lewis & John Booth: Learning From Marketing to Quantify Developer Relations Impact_
+
+![DevRelCon session by Melinda](/articles/2023/115.6.devrelcon_melinda.jpg)
+_Melinda Seckington: The Art of Communication Design_
