--- a/content/articles/116.speaking-at-tweakers-dev-summit.md
+++ b/content/articles/116.speaking-at-tweakers-dev-summit.md
@@ -18,4 +18,4 @@ The event consisted of several tracks including, front-end, back-end, DevOps, se
 
 My session, which was part of the back-end track, covered how [Dapr](https://dapr.io) speeds up distributed systems development by using the many building block APIs. The preceding session named _From Monolith to Microservices and Beyond_ was a great lead-in to my session (thanks again Peter van Vliet!).
 
-The slides can be [downloaded here](/articles/2023/116.tweakers-dev-summit-presentation.pdf). If you want to learn more about Dapr or have questions about the project, please join the [Dapr Discord](http://bit.ly/dapr-discord).
+The slides can be <a href="/articles/2023/116.tweakers-dev-summit-presentation.pdf" target="_blank">downloaded here</a>. If you want to learn more about Dapr or have questions about the project, please join the [Dapr Discord](http://bit.ly/dapr-discord).
