--- a/content/articles/118.dotnetfriday-dapr-workflow.md
+++ b/content/articles/118.dotnetfriday-dapr-workflow.md
@@ -22,6 +22,6 @@ When I arrived there I was welcomed with a cake, since earlier that week it was 
 
 I finally met with [Kenny Baas-Schwegler](https://www.linkedin.com/in/kenny-baas/) again, who gave a session after me, together with [Bruno Boucard](https://www.linkedin.com/in/brunoboucard/), about refactoring towards deeper insights using Domain-Driven Design. This was a great example of DDD in practise with live coding.
 
-Thanks everyone for attending this event and asking grreat questions about Dapr workflow. My slides can be <a href="/articles/2023/118.dotnetfriday-dapr-workflow.pdf" target="_blank">downloaded here</a>. The demo apps can be found in this <a href="https:##github.com/diagrid-labs/dapr-workflow-demos" target="_blank">GitHub repo</a>. If you want to learn more about Dapr or have questions about the project, please join the [Dapr Discord](http://bit.ly/dapr-discord).
+Thanks everyone for attending this event and asking great questions about Dapr workflow. My slides can be <a href="/articles/2023/118.dotnetfriday-dapr-workflow.pdf" target="_blank">downloaded here</a>. The demo apps can be found in this <a href="https:##github.com/diagrid-labs/dapr-workflow-demos" target="_blank">GitHub repo</a>. If you want to learn more about Dapr or have questions about the project, please join the [Dapr Discord](http://bit.ly/dapr-discord).
 
 ![DotNet Friday close-up](/articles/2023/118.dotnetfriday-2.jpg)
