--- a/content/articles/120.4cee-meetup-dapr.md
+++ b/content/articles/120.4cee-meetup-dapr.md
@@ -12,7 +12,7 @@ layout: article
 
 ![DevOpsDays ignite session](/articles/2023/120.4cee-techtalk.png)
 
-**TLDR: <a href="/articles/2023/120.c4ee-dapr-101" target="_blank">Download the slides</a> | <a href="https://github.com/dapr/quickstarts" target="_blank">Dapr Quickstarts repository</a>**
+**TLDR: <a href="/articles/2023/120.c4ee-dapr-101.pdf" target="_blank">Download the slides</a> | <a href="https://github.com/dapr/quickstarts" target="_blank">Dapr Quickstarts repository</a>**
 
 Jeffrey Bosch invited me to give a tech talk at the 4CEE meetup in Ede on Thu 12th of Oct. It was a busy week with both Techorama and [DevOpsDays Eindhoven](/articles/devopsdays-creative-coding), but I was glad I could join this meetup and show people the benefits of building applications with [Dapr](https://dapr.io). The event was very well organized, the turn-out was great, and this was only the second time they organized such a thing! 👏
 
@@ -20,4 +20,4 @@ The other speaker at this meetup was Stacy Cashmore, who talked about creating a
 
 I gave an introductory session about Dapr, the distributed application runtime, and demonstrated service-to-service invocation, pub/sub messaging, and state management. Thanks everyone for attending and asking good questions!
 
-My slides can be <a href="/articles/2023/120.c4ee-dapr-101" target="_blank">downloaded here</a>. A good starting point for learning Dapr is the [Dapr Quickstarts repository](https://github.com/dapr/quickstarts) on GitHub. Do you have questions about Dapr? Please join the [Dapr Discord](https://bit.ly/dapr-discord) and ask away!
+My slides can be <a href="/articles/2023/120.c4ee-dapr-101.pdf" target="_blank">downloaded here</a>. A good starting point for learning Dapr is the [Dapr Quickstarts repository](https://github.com/dapr/quickstarts) on GitHub. Do you have questions about Dapr? Please join the [Dapr Discord](https://bit.ly/dapr-discord) and ask away!
