--- a/content/articles/120.4cee-meetup-dapr.md
+++ b/content/articles/120.4cee-meetup-dapr.md
@@ -10,7 +10,7 @@ description:
 layout: article
 ---
 
-![DevOpsDays ignite session](/articles/2023/120.4cee-techtalk.png)
+![4CEE tech talk](/articles/2023/120.4cee-techtalk.png)
 
 **TLDR: <a href="/articles/2023/120.c4ee-dapr-101.pdf" target="_blank">Download the slides</a> | <a href="https://github.com/dapr/quickstarts" target="_blank">Dapr Quickstarts repository</a>**
 
