--- a/content/articles/120.4cee-meetup-dapr.md
+++ b/content/articles/120.4cee-meetup-dapr.md
@@ -1,5 +1,5 @@
 ---
-cover: /articles/2023/120.4cee-techtalk.png
+cover: /articles/2023/120.1.4cee-marc.jpeg
 author:
   name: Marc Duiker
   avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
@@ -10,13 +10,15 @@ description:
 layout: article
 ---
 
-![4CEE tech talk](/articles/2023/120.4cee-techtalk.png)
+![4CEE tech talk](/articles/2023/120.1.4cee-marc.jpeg)
 
 **TLDR: <a href="/articles/2023/120.c4ee-dapr-101.pdf" target="_blank">Download the slides</a> | <a href="https://github.com/dapr/quickstarts" target="_blank">Dapr Quickstarts repository</a>**
 
 Jeffrey Bosch invited me to give a tech talk at the 4CEE meetup in Ede on Thu 12th of Oct. It was a busy week with both Techorama and [DevOpsDays Eindhoven](/articles/devopsdays-creative-coding), but I was glad I could join this meetup and show people the benefits of building applications with [Dapr](https://dapr.io). The event was very well organized, the turn-out was great, and this was only the second time they organized such a thing! 👏
 
 The other speaker at this meetup was Stacy Cashmore, who talked about creating a blog website using Blazor and Azure Static Web Apps. Stacy is a great speaker, I really enjoy her enthusiasm and the funny jokes she makes while doing live coding. 🚀
+
+![Marc close-up](/articles/2023/120.2.4cee-marc.jpeg)
 
 I gave an introductory session about Dapr, the distributed application runtime, and demonstrated service-to-service invocation, pub/sub messaging, and state management. Thanks everyone for attending and asking good questions!
 
