Add Techorama post
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/articles/120.4cee-meetup-dapr.md
+++ b/content/articles/120.4cee-meetup-dapr.md
@@ -14,7 +14,7 @@ layout: article
 
 **TLDR: <a href="/articles/2023/120.c4ee-dapr-101.pdf" target="_blank">Download the slides</a> | <a href="https://github.com/dapr/quickstarts" target="_blank">Dapr Quickstarts repository</a>**
 
-Jeffrey Bosch invited me to give a tech talk at the 4CEE meetup in Ede on Thu 12th of Oct. It was a busy week with both Techorama and [DevOpsDays Eindhoven](/articles/devopsdays-creative-coding), but I was glad I could join this meetup and show people the benefits of building applications with [Dapr](https://dapr.io). The event was very well organized, the turn-out was great, and this was only the second time they organized such a thing! 👏
+Jeffrey Bosch invited me to give a tech talk at the 4CEE meetup in Ede on Thu 12th of Oct. It was a busy week with both [Techorama](/articles/sponsoring-techorama-nl-2023) and [DevOpsDays Eindhoven](/articles/devopsdays-creative-coding), but I was glad I could join this meetup and show people the benefits of building applications with [Dapr](https://dapr.io). The event was very well organized, the turn-out was great, and this was only the second time they organized such a thing! 👏
 
 The other speaker at this meetup was Stacy Cashmore, who talked about creating a blog website using Blazor and Azure Static Web Apps. Stacy is a great speaker, I really enjoy her enthusiasm and the funny jokes she makes while doing live coding. 🚀
 
