--- a/content/articles/121.sponsoring-techorama-nl-2023.md
+++ b/content/articles/121.sponsoring-techorama-nl-2023.md
@@ -5,7 +5,7 @@ author:
   avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
   link: https://twitter.com/marcduiker
 date: 2023-10-11
-title: "Sponsoring Techorama NL 2023"
+title: "Sponsoring Techorama NL and (re-)connecting with the community ❤️"
 description:
 layout: article
 ---
