--- a/content/articles/121.sponsoring-techorama-nl-2023.md
+++ b/content/articles/121.sponsoring-techorama-nl-2023.md
@@ -12,19 +12,19 @@ layout: article
 
 ![Selfie at the booth](/articles/2023/121.1.techorama.jpg)
 
-On Tuesday and Wednesday this week, I was at [Techorama](https://techorama.nl/) in Utrecht, The Netherlands. Techorama is a well-known conference in both the Netherlands and Belgium, and both editions attract a large number of developers. This time I wasn't a speaker or attendee, but I was there as a sponsor representing [Diagrid](https://diagrid.io).
+On Tuesday and Wednesday this week (10 & 11 Oct), I was at [Techorama](https://techorama.nl/) in Utrecht, The Netherlands. Techorama is a well-known conference in both the Netherlands and Belgium, and both editions attract a large number of developers. This time I wasn't a speaker or attendee, but I was there as a sponsor representing [Diagrid](https://diagrid.io).
 
 Sponsoring this event was a great opportunity for Diagrid to increase the awareness around both Dapr and Diagrid, and I had a lot of fun at the booth talking to people about [Dapr](https://dapr.io), the benefits of using it, as well as explaining Diagrid and the products we're making.
 
 ![Lego builders](/articles/2023/121.2.builders.jpg)
 
-Since I'm a big Lego fan myself, and I know many people in IT are as well, I decided to bring a box of Lego pieces, so attendees could build their own Lego microservice and connect it to the distributed system. This turned out to a big success, many developers stopped by to build a service (or two), and the result really looked like a (chaotic) Lego artwork. Thanks for building everyone! 🏗️
+Since I'm a big Lego fan myself, and I know many people in IT are as well, I decided to bring a box of Lego pieces, so attendees could build their own Lego microservice, connect it to other services, resulting in a large distributed application. This turned out to a big success, many developers stopped by to build a service (or two), and the result really looked like a (chaotic) Lego artwork. Thanks for building everyone! 🏗️
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/0fYHfPnEAyU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 ![Lego top down view](/articles/2023/121.3.lego.jpg)
 
-At the end of the second, day I raffled off an Indiana Jones Lego kit, which was won by Jop. Many congratulations! 🎉
+At the end of the second day, I raffled off an Indiana Jones Lego kit, which was won by Jop. Many congratulations! 🎉
 
 ![Lego top down view](/articles/2023/121.4.winner.jpg)
 
