Add image credit
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/articles/116.speaking-at-tweakers-dev-summit.md
+++ b/content/articles/116.speaking-at-tweakers-dev-summit.md
@@ -11,6 +11,7 @@ layout: article
 ---
 
 ![Me speaking at Tweakers Dev Summit](/articles/2023/116.tweakers-dev-summit-marcduiker.jpg)
+*\[Photo by [Tweakers](https://tweakers.net/)\]*
 
 Last week I had the oppurtunity to speak at the [Tweakers Developers Summit](https://tweakers.net/partners/devsummit2023/1900/sprekerstracks/) in Utrecht, the Netherlands.
 
