--- a/content/articles/32.the-anatomy-of-function-naming.md
+++ b/content/articles/32.the-anatomy-of-function-naming.md
@@ -67,7 +67,35 @@ An orchestration function depends on the implemented activity functions and both
 
 The most basic option to have consistent naming of functions is to use a static class with string constants. Now both orchestration and activity functions can use that naming class:
 
-{% gist 0a841a123b103acbcd5fe96437b87084 %}
+```csharp
+namespace DurableFunctions.Demo.DotNetCore.Basics
+{
+    public static class FunctionName
+    {
+        public const string HelloNameActivity = "HelloNameActivity";
+
+        public const string HelloNameOrchestration = "HelloNameOrchestration";
+    }
+}
+```
+
+```csharp
+namespace DurableFunctions.Demo.DotNetCore.Basics.Activities
+{
+    public static class HelloNameActivity
+    {
+        [FunctionName(FunctionName.HelloNameActivity)]
+        public static string Run(
+            [ActivityTrigger] string name,
+            ILogger logger)
+        {
+            logger.LogInformation($"Name: {name}");
+
+            return $"Hello {name}!";
+        }
+    }
+}
+```
 
 I suggest using this option only if you require a function naming convention that is not compatible with your C# class naming convention (e.g. you require hyphens or underscores in the function name). 
 
@@ -77,7 +105,23 @@ You could add comments what valid function names are and, even more important, y
 
 Since I write only one function per class I do the following when specifying the `FunctionName` attribute value:
 
-{% gist 73c287a5d07c9c8a2a881cc7ecf25960 %}
+```csharp
+namespace DurableFunctions.Demo.DotNetCore.Basics.Activities
+{
+    public static class HelloNameActivity
+    {
+        [FunctionName(nameof(HelloNameActivity))]
+        public static string Run(
+            [ActivityTrigger] string name,
+            ILogger logger)
+        {
+            logger.LogInformation($"Name: {name}");
+
+            return $"Hello {name}!";
+        }
+    }
+}
+```
 
 The `nameof()` expression is available since [C# 6.0](https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/keywords/nameof) and provides a very clean way to use strings based on class names.
 
