--- a/content/articles/123.speaking-at-swetugg-goteborg-2023.md
+++ b/content/articles/123.speaking-at-swetugg-goteborg-2023.md
@@ -12,10 +12,13 @@ layout: article
 
 ![Speaking at Swetugg](/articles/2023/123.1.swetugg-marcduiker.jpg)
 
-- **TLDR: <a href="/articles/2023/123.swetugg-dapr-101.pdf" target="_blank">Download the Dapr introduction slides</a> | <a href="https://github.com/dapr/quickstarts" target="_blank">Dapr quickstarts on GitHub</a>**
-- **TLDR: <a href="/articles/2023/123.swetugg-dapr-workflow.pdf" target="_blank">Download the Dapr workflow slides</a> | <a href="https://github.com/diagrid-labs/dapr-workflow-demos" target="_blank">Dapr workflow demos on GitHub</a>**
+**TLDR:**
+- <a href="/articles/2023/123.swetugg-dapr-101.pdf" target="_blank">Download the Dapr introduction slides</a> | <a href="https://github.com/dapr/quickstarts" target="_blank">Dapr quickstarts on GitHub</a>
+- <a href="/articles/2023/123.swetugg-dapr-workflow.pdf" target="_blank">Download the Dapr workflow slides</a> | <a href="https://github.com/diagrid-labs/dapr-workflow-demos" target="_blank">Dapr workflow demos on GitHub</a>
 
-From Thursday 26th to Friday 27th October, I was at [Swetugg Göteborg](https://www.swetugg.se/gbg-2023) in Sweden. It was my first time at a Swetugg conference and I really enjoyed te experience.
+---
+
+From Thursday 26th to Friday 27th October, I was at [Swetugg Göteborg](https://www.swetugg.se/gbg-2023) in Sweden. It was my first time at a Swetugg conference and I really enjoyed the experience.
 
 I gave my session _"Start building applications with ease using building block APIs"_ on Thursday. Since a couple of speakers had to cancel their sessions, I volunteered to give an additional talk, _"Orchestrating your business logic reliably with workflow as code"_ on Friday. Thanks to everyone that attended!
 
