--- a/content/articles/124.speaking-at-buildstuff-2023.md
+++ b/content/articles/124.speaking-at-buildstuff-2023.md
@@ -12,8 +12,7 @@ layout: article
 
 ![Speaking at BuildStuff](/articles/2023/124.1.buildstuff.jpeg)
 
-**TLDR:**
-<a href="/articles/2023/124.dapr-workflow-buildstuff.pdf" target="_blank">Download the slides</a> | <a href="https://github.com/diagrid-labs/dapr-workflow-demos" target="_blank">Dapr workflow demos on GitHub</a>
+**TLDR:** <a href="/articles/2023/124.dapr-workflow-buildstuff.pdf" target="_blank">Download the slides</a> | <a href="https://github.com/diagrid-labs/dapr-workflow-demos" target="_blank">Dapr workflow demos on GitHub</a>
 
 ---
 
