Add NDC Porto pictures
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/articles/122.speaking-at-ndcporto-2023.md
+++ b/content/articles/122.speaking-at-ndcporto-2023.md
@@ -18,7 +18,11 @@ From Wednesday 18th to Friday 20th October, I was at [NDC Porto](https://ndcport
 
 By looking at the conference agenda, it was clear that microservices and (event-driven) architecture related talks are very popular currently, so my Dapr talk was a good fit 💪. I couldn't attend many of the other talks, unfortunately, but I'll watch them as soon as they're published on [YouTube](https://www.youtube.com/@ndc).
 
+![Speaking at NDC Porto](/articles/2023/122.1.ndc-porto-speaking.jpg)
+
 I'm glad my session was well attended, especially when someone like Richard Campbell is giving a talk at the same time 😅. Thanks to everyone for attending, and asking great questions afterwards. I hope to see you at another NDC conference again!
+
+![Speaking at NDC Porto](/articles/2023/122.2.ndc-porto-speaking.jpg)
 
 I really like meeting people at these conferences. I spoke to many developers who I haven't met before and talked about Dapr (and pixelart). I also (re)connected with some former colleagues and speaker friends ❤️. It was great to meet you all! 🤗
 
