Add space debris sketch
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/5.creative-coding.md
+++ b/content/5.creative-coding.md
@@ -15,6 +15,11 @@ Creative coding is ideal for educational purposes. It's very rewarding for stude
 
 Here are some sketches I made with [P5js](https://p5js.org/), a JavaScript library for creative coding based on [Processing](https://processing.org/). 
 
+**Space Debris**
+
+<iframe src="https://openprocessing.org/sketch/2121413/embed/" width="500" height="400"></iframe>
+
+
 **Perfect loop**
 
 <iframe src="https://openprocessing.org/sketch/1923671/embed/" width="500" height="500"></iframe>
