--- a/content/articles/126.speaking-at-swetugg-stockholm-2024-.md
+++ b/content/articles/126.speaking-at-swetugg-stockholm-2024-.md
@@ -16,7 +16,7 @@ layout: article
 
 ---
 
-This week I'm at [Swetugg Stockholm](https://www.swetugg.se/sthlm-2024) where I just gave my session _"One API to rule them all: serverless Dapr"_. This is a brand-new session, where I talk about the various Dapr deployment models, and dive into Diagrid Catalyst, a new product that offers true serverless Dapr APIs for communication, data, and workflow. Thanks to everyone who attended my session, the room was fully packed!
+This week I'm at [Swetugg Stockholm](https://www.swetugg.se/sthlm-2024) where I just gave my session _"One API to rule them all: serverless Dapr"_. This is a brand-new session, where I talked about the various Dapr deployment models, and demonstrated [Diagrid Catalyst](https://www.diagrid.io/catalyst), a new product that offers true serverless Dapr APIs for communication, data, and workflow. Thanks to everyone who attended my session, the room was fully packed!
 
 As usual, I brought plenty of Dapr stickers for the attendees, and I also brought some Dutch stroopwafels to share with the other speakers.
 
