Fix LinkedIn link
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/6.about.md
+++ b/content/6.about.md
@@ -17,7 +17,6 @@ In his spare time, Marc likes to give attention to the creative part of his brai
 - [Follow me on Mastodon](https://mstdn.social/@marcduiker)
 - [Follow me on YouTube](https://www.youtube.com/@marcduiker)
 - [Follow me on dev.to](https://dev.to/marcduiker)
-- [Follow me on Polywork](https://www.polywork.com/marcduiker)
-- [Connect with me on LinkedIn](https://www.linkedin.com/in/marcduiker/)
+- [Connect with me on LinkedIn](https://www.linkedin.com/in/mduiker/)
 - [Have a look at my open source projects on GitHub](https://www.github.com/marcduiker)
 - [Sponsor my pixelart or commission me via Ko-fi](https://ko-fi.com/marcduiker)
