Add Cloud Native Weekly
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/articles/127.festive-tech-calendar-2023.md
+++ b/content/articles/127.festive-tech-calendar-2023.md
@@ -21,3 +21,7 @@ I'm a big fan of community driven tech events, and [Festive Tech Calendar](https
 The Santa Claus Workflow demo is available on [GitHub](https://github.com/diagrid-labs/santa-claus-workflow).
 
 A big shout-out goes to the [organizers](https://twitter.com/_cloudfamily) as they always combine this event with a charity 💪.
+
+Do you have questions about Dapr? Please join the [Dapr Discord](https://bit.ly/dapr-discord) and ask away! Do you like Dapr and want to show your support? Claim this [community supporter Holopin badge](https://bit.ly/dapr-supporter)!
+
+[![Dapr community supporter badge](/articles/2023/124.3.dapr-community-supporter.png)](https://bit.ly/dapr-supporter)
