Upate index and about
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -7,13 +7,15 @@ title: Home
 
 # 👋 Hi, I am Marc Duiker
 
-This website is heavily under construction 👷‍♀️🏗️. 
+I'm a developer advocate who loves to code, write, and draw, to help developers achieve more every day. 🚀
 
-I'm changing it from a 100+ microservice architecture to a single monolith 😜.
+I have a long history with .NET, Azure, serverless ⚡️, and event-driven architectures ✉️. These days I'm creating content around Dapr, the distributed application runtime, which allows me to explore more programming languages and cloud platforms! 🤩
 
-Please come back later... or don't :shrug:.
+When I'm not working to improve the developer experience, I am either drawing some [pixel art](/pixelart) for fun, doing [creative coding](creative-coding) in JavaScript to create interactive visuals, or creating soundscapes with my modular synth 🎛️.
 
-![Marc Duiker pixelart avatar](/marcduiker_hardhat.gif)
+Check the [about page](/about) if you want to contact me. See you around! 👋
+
+![Marc Duiker pixelart avatar](/marcduiker_dapr_rainbow_eyes.gif)
 
 ::card-grid
 #title
@@ -49,11 +51,3 @@ Things I love doing
   :: -->
 ::
 
-### //TODO
-
-- [X] Migrate blog posts (in progress)
-- [ ] Add graphics
-- [ ] Add page on DevEx
-- [X] Add page on pixel art
-- [X] Add page on creative coding
-- [ ] Update this index page
