--- a/content/6.about.md
+++ b/content/6.about.md
@@ -7,16 +7,17 @@ layout: default
 
 Marc is a Sr Developer Advocate at [Diagrid](https://diagrid.io) with a strong focus on event-driven architectures in the cloud. He loves helping developers to achieve more every day.
 
-You might have seen Marc at a developer meetup or conference since he's a regular speaker in the area of Dapr, Azure cloud, and serverless technologies. He started [Azure Functions University](https://github.com/marcduiker/azure-functions-university), a free and open source learning curriculum on GitHub, where everyone can learn about Azure Functions at their own pace. From 2019 to 2023 Marc received the Microsoft Azure MVP award for his community contributions.
+You might have seen Marc at a developer meetup or conference since he's a regular speaker in the area of Dapr, Azure cloud, and serverless technologies. 
+From 2019 to 2024 Marc received the Microsoft Azure MVP award for his community contributions.
 
-In his spare time, Marc likes to give attention to the creative part of his brain. He likes to create pixel art (check out VSCode Pets), code visuals & music, and an occasional retro game.
+In his spare time, Marc likes to give attention to the creative part of his brain. He likes to create pixel art (check out [VSCode Pets](https://marketplace.visualstudio.com/items?itemName=tonybaloney.vscode-pets)), code visuals & music, and an occasional retro game.
 
 ### Connect with me on the web
 
-- [Follow me on Twitter](https://twitter.com/marcduiker)
-- [Follow me on Mastodon](https://mstdn.social/@marcduiker)
-- [Follow me on YouTube](https://www.youtube.com/@marcduiker)
-- [Follow me on dev.to](https://dev.to/marcduiker)
-- [Connect with me on LinkedIn](https://www.linkedin.com/in/mduiker/)
-- [Have a look at my open source projects on GitHub](https://www.github.com/marcduiker)
-- [Sponsor my pixelart or commission me via Ko-fi](https://ko-fi.com/marcduiker)
+- [Follow me on Twitter](https://twitter.com/marcduiker) <Icon name="uil:twitter" size=24 />
+- [Follow me on Mastodon](https://mstdn.social/@marcduiker) <Icon name="uil:comment" size=24 />
+- [Follow me on YouTube](https://www.youtube.com/@marcduiker) <Icon name="uil:youtube" size=24 />
+- [Follow me on dev.to](https://dev.to/marcduiker) <Icon name="uil:pen" size=24 />
+- [Connect with me on LinkedIn](https://www.linkedin.com/in/mduiker/) <Icon name="uil:linkedin" size=24 />
+- [Have a look at my open source projects on GitHub](https://www.github.com/marcduiker) <Icon name="uil:github" size=24 />
+- [Sponsor my pixelart or commission me via Ko-fi](https://ko-fi.com/marcduiker) <Icon name="uil:illustration" size=24 />
