Add KubeCon Paris
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/articles/131.dapr-day-2024.md
+++ b/content/articles/131.dapr-day-2024.md
@@ -14,7 +14,7 @@ layout: article
 
 ---
 
-On Feb 21st Cecil Phillips and I MC-ed Dapr Day 2024, an online conference to learn all about the Dapr APIs for building distributed applications and best practices to run your apps in production.
+On Feb 21st Cecil Phillip and I MC-ed Dapr Day 2024, an online conference to learn all about the Dapr APIs for building distributed applications and best practices to run your apps in production.
 
 Yaron Schneider, one of the Dapr co-creaters opened the event, followed by sessions from:
 
