--- a/content/articles/132.kubecon-paris-2024.md
+++ b/content/articles/132.kubecon-paris-2024.md
@@ -1,5 +1,5 @@
 ---
-cover: /articles/2024/132.6.kubecon-paris.jpg
+cover: /articles/2024/132.1.kubecon-paris.jpg
 author:
   name: Marc Duiker
   avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
@@ -10,25 +10,26 @@ description:
 layout: article
 ---
 
-![KubeCon Paris Diagrid Team](/articles/2024/132.5.kubecon-paris.jpg)
+![KubeCon Paris Diagrid Team](/articles/2024/132.1.kubecon-paris.jpg)
 
 ---
 
 From March 19-22 KubeCon Europe was taking place in Paris. Diagrid was sponsoring both [AppDeveloperCon](https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/co-located-events/appdevelopercon/) and [KubeCon](https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/), and I was responsible for the booths, swag, a Dapr demo to highlight a new free edition of one of our products, and a retro game to attract people to the booth. 
 
-![KubeCon Dapr game](/articles/2024/132.1.kubecon-paris-booth.jpg)
-
-My colleagues did a ton of talks at both the co-located event and KubeCon, and I had the opportunity to give a lightning talk about Dapr. It was my first time speaking at KubeCon, so I was quite excited for this!
-
-![KubeCon Dapr lightning talk](/articles/2024/132.4.kubecon-paris.jpg)
-
 A week before KubeCon I recorded a video to announce our presence at the event:
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/WlkThEEW10s?si=LEfK1ebCdwd_R3ii" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-I had a great time at the booth, talking to people about Dapr and the Diagrid products. Many attendees (and other sponsors) played the retro game, took the pixelart stickers, or the multi tool, our give-away, that symbolizes Dapr and all of its APIs.
+My colleagues did a ton of talks at both the co-located event and KubeCon, and I had the opportunity to give a lightning talk about Dapr. It was my first time speaking at KubeCon, so I was quite excited for this!
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/WlkThEEW10s?si=LEfK1ebCdwd_R3ii" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="326" height="580" src="https://www.youtube.com/embed/Hz_xsEHPx9c" title="KubeCon Paris 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+![KubeCon Dapr game](/articles/2024/132.5.kubecon-paris.jpg)
+
+I had a great time at the booth, talking to loads of people about Dapr and the Diagrid products. Many attendees (and other sponsors) played the Dapr retro game, took the pixelart stickers, or the multi tool, our give-away, that symbolizes Dapr and all of its APIs.
+
+<iframe width="326" height="580" src="https://www.youtube.com/embed/hAP91F3ZyqE" title="KubeCon Paris 2024 - Playing the Dapr game" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 
 It was great seeing my colleagues again, and meeting with many Dapr enthusiasts & end-users IRL for the first time! 🎉
 
