Update kubecon post
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/articles/132.kubecon-paris-2024.md
+++ b/content/articles/132.kubecon-paris-2024.md
@@ -33,4 +33,4 @@ I had a great time at the booth, talking to loads of people about Dapr and the D
 
 It was great seeing my colleagues again, and meeting with many Dapr enthusiasts & end-users IRL for the first time! 🎉
 
-I'm really exhausted after 4 conference days, but I'm also very happy with the result. Now, I'll go sleep for two days 😴.
+I'm really exhausted after 4 conference days, but I'm also very happy with the result. Now, I'll go to sleep for two days 😴.
