--- a/content/4.pixelart.md
+++ b/content/4.pixelart.md
@@ -7,11 +7,15 @@ layout: default
 
 Some years ago I got interested in [Pico8](https://www.lexaloffle.com/pico-8.php), a fantasy game console for making, sharing, and playing retro games. I made a small game around Azure Functions, which you can play below. I really enjoyed making this game, but it was also a lot of work. I started just doing pixel art with Pico8 and later changed to [Aseprite](https://www.aseprite.org/), which is a great tool dedicated for making pixel art. 
 
-<iframe height="167" frameborder="0" src="https://itch.io/embed/542859" width="552"><a href="https://marcduiker.itch.io/azure-functions-the-game">Azure Functions, The Game by marcduiker</a></iframe>
+<iframe height="167" frameborder="0" src="https://itch.io/embed/542859" width="552" height="167"><a href="https://marcduiker.itch.io/azure-functions-the-game">Azure Functions, The Game by marcduiker</a></iframe>
 
 Every now and then I still enjoy making a small retro game, such as my announcement to join Diagrid as a Sr Developer Advocate, but most of the time I stick with drawing pixel art, either for my own enjoyment, or when people commission me to design a logo, or draw their online avatar.
 
 <iframe src="https://itch.io/embed/1859023" width="552" height="167" frameborder="0"><a href="https://marcduiker.itch.io/joining-diagrid">Joining Diagrid by marcduiker</a></iframe>
+
+For KubeCon Paris 2024, I made a Dapr inspired retro game that people played at the Diagrid sponsor booth. The player needs to avoid rogue messages, collect Dapr coins and the Dapr hat, in order to get to the development team and share their Dapr knowledge. The game has an educational element because after a level is completed some Dapr information is shared with the player. The game was very popular at the conference, see the [KubeCon Paris blog post](./articles/132.kubecon-paris-2024.md).
+
+<iframe frameborder="0" src="https://itch.io/embed/2163754" width="552" height="167"><a href="https://marcduiker.itch.io/dapr-game">The Dapr Game by marcduiker</a></iframe>
 
 ## Commission me
 
