--- a/content/articles/131.dapr-day-2024.md
+++ b/content/articles/131.dapr-day-2024.md
@@ -5,7 +5,7 @@ author:
   avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
   link: https://twitter.com/marcduiker
 date: 2024-02-21
-title: "Dapr Day 2024"
+title: "Organizing Dapr Day 2024"
 description:
 layout: article
 ---
