link to Dapr game post
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/articles/132.kubecon-paris-2024.md
+++ b/content/articles/132.kubecon-paris-2024.md
@@ -14,7 +14,7 @@ layout: article
 
 ---
 
-From March 19-22 KubeCon Europe was taking place in Paris. Diagrid was sponsoring both [AppDeveloperCon](https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/co-located-events/appdevelopercon/) and [KubeCon](https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/), and I was responsible for the booths, swag, a Dapr demo to highlight a new free edition of [one of our products](https://www.diagrid.io/conductor), and a retro game to attract people to the booth.
+From March 19-22 KubeCon Europe was taking place in Paris. Diagrid was sponsoring both [AppDeveloperCon](https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/co-located-events/appdevelopercon/) and [KubeCon](https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/), and I was responsible for the booths, swag, a Dapr demo to highlight a new free edition of [one of our products](https://www.diagrid.io/conductor), and a [retro game](./133.dapr-game.md) to attract people to the booth.
 
 A week before KubeCon I recorded a video to announce our presence at the event:
 
