Update Dapr game post
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/articles/133.dapr-game.md
+++ b/content/articles/133.dapr-game.md
@@ -12,14 +12,18 @@ layout: article
 
 ![Dapr game](/articles/2024/133.2.dapr-game.gif)
 
-I made another retro game! This time it's a Dapr inspired game that I made for KubeCon Paris 2024 for people to play at the Diagrid booth (see some video's in [this post](./132.kubecon-paris-2024.md)). The player needs to avoid rogue messages, collect Dapr coins and the Dapr hat, in order to get to the development team and share their Dapr knowledge. The game has an educational element because after a level is completed some Dapr information is shared with the player.
+I made another retro game! This time it's a Dapr inspired game that I made for people new to Dapr. The game was first shown at KubeCon Paris 2024 at the Diagrid booth (see [this post](./132.kubecon-paris-2024.md)) but the game is now available for everyone to play online at [itch.io](https://marcduiker.itch.io/dapr-game)! 🎉
+
+<iframe frameborder="0" src="https://itch.io/embed/2163754" width="552" height="167"><a href="https://marcduiker.itch.io/dapr-game">The Dapr Game by marcduiker</a></iframe>
+
+The player needs to avoid rogue messages, collect Dapr coins and the Dapr hat, in order to get to the development team and share their Dapr knowledge. The game has an educational element because after a level is completed some Dapr information is shared with the player.
 
 ![Dapr game](/articles/2024/133.4.dapr-game-sprite.png)
 
 I made the game with [Pico8](https://www.lexaloffle.com/pico-8.php), a fantasy game console for making, sharing, and playing retro games. I had a lot of fun drawing all the sprites, like the computers and the groups of developers, designing the sound effects, and composing the music. The gameplay is very similar to the Azure Functions game, but I added some new gameplay features, such as the gray/blue powerlines to limit player movement once the Dapr hat is collected. At the moment the game consists of 3 levels, but I will add a couple more over time.
 
-## Play the game online at [itch.io](https://marcduiker.itch.io/dapr-game)
+If you have the Pico8 software, you can download this png file below and play the game offline.
 
-<iframe frameborder="0" src="https://itch.io/embed/2163754" width="552" height="167"><a href="https://marcduiker.itch.io/dapr-game">The Dapr Game by marcduiker</a></iframe>
+> Note: The links at the end of the game won't open in a browser when playing in Pico8 offline. That functionality is only supported in the web version available on itch.io.
 
 ![Dapr game](/articles/2024/133.3.pico8-dapr-cart.png)
