Add picture for FutureTech
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/articles/134.speaking-at-futuretech-2024.md
+++ b/content/articles/134.speaking-at-futuretech-2024.md
@@ -1,5 +1,5 @@
 ---
-cover: /articles/2024/134.1.futuretech.jpeg
+cover: /articles/2024/134.1.futuretech.jpg
 author:
   name: Marc Duiker
   avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
@@ -10,7 +10,7 @@ description:
 layout: article
 ---
 
-![Speaking at FutureTech](/articles/2024/134.1.futuretech.jpeg)
+![Speaking at FutureTech](/articles/2024/134.1.futuretech.jpg)
 
 **TLDR:** <a href="/articles/2024/134.futuretech-dapr-actors.pdf" target="_blank">Download the slides</a> | <a href="https://github.com/diagrid-labs/dapr-actor-demos" target="_blank">Dapr Actor Demos on GitHub</a>
 
@@ -18,7 +18,7 @@ layout: article
 
 On April 17th, I spoke at the [FutureTech](https://futuretech.nl) conference in Utrecht, the Netherlands. I gave a session about Dapr Actors, one of [Dapr](https://dapr.io) APIs that allows you to build distributed and concurrent applications using the Actor Model.
 
-Next my session there were two other Dapr related sessions:
+Next to my session, there were two other Dapr related sessions:
 
 - _DAPR and .NET Aspire: A royal wedding_ by Florian van Dillen
 - _Building Future-Ready Apps with .NET 8 and Azure Serverless Ecosystem_ by Stas Lebedenko
@@ -26,8 +26,6 @@ Next my session there were two other Dapr related sessions:
 It was awesome to see so much Dapr content at a conference like FutureTech!
 
 As usual, I brought plenty of Dapr stickers for the conference attendees. All of them were gone by the end of the day 😁.
-
-![Dapr Stickers](/articles/2024/134.2.futuretech.jpeg)
 
 Thanks to the organizers of FutureTech for inviting me and organizing this event! I really enjoyed meeting many former colleagues and friends again. The speaker dinner the evening before was an excellent opportunity to connect with peers and meet lovely new people.
 
