Add session by Eduard
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/articles/134.speaking-at-futuretech-2024.md
+++ b/content/articles/134.speaking-at-futuretech-2024.md
@@ -16,10 +16,11 @@ layout: article
 
 ---
 
-On April 17th, I spoke at the [FutureTech](https://futuretech.nl) conference in Utrecht, the Netherlands. I gave a session about Dapr Actors, one of [Dapr](https://dapr.io) APIs that allows you to build distributed and concurrent applications using the Actor Model.
+On April 17th, I spoke at the [FutureTech](https://futuretech.nl) conference in Utrecht, the Netherlands. I gave a session about Dapr Actors, one of the [Dapr](https://dapr.io) APIs that allows you to build distributed and concurrent applications using the Actor Model.
 
-Next to my session, there were two other Dapr related sessions:
+Next to my session, there were three other sessions that covered some aspects of Dapr:
 
+- _Microservices Orchestration with Azure Container Apps_ by Eduard Keilholz
 - _DAPR and .NET Aspire: A royal wedding_ by Florian van Dillen
 - _Building Future-Ready Apps with .NET 8 and Azure Serverless Ecosystem_ by Stas Lebedenko
 
