Add yellow border
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -24,7 +24,7 @@ Things I love doing
 #default
   ::card
   #title
-  Improving DevEx 📝 📽️ 💻
+  Improving DevEx 📝 💻
   #description
   :button-link[Read my articles]{ href="/articles"}
   ::
