Add pixelart animation and pictures for bio
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/6.about.md
+++ b/content/6.about.md
@@ -5,6 +5,11 @@ layout: default
 
 ## Bio
 
+<div class="biopics">
+    <img src="bio/marcduiker_dapr_rainbow.png" width="200">
+    <img src="bio/marcduiker_speaking.jpg" width="200">
+</div>
+
 Marc is a Sr Developer Advocate at [Diagrid](https://diagrid.io) with a strong focus on event-driven architectures in the cloud. He loves helping developers to achieve more every day.
 
 You might have seen Marc at a developer meetup or conference since he's a regular speaker in the area of Dapr, Azure cloud, and serverless technologies. 
