--- a/content/1.index.md
+++ b/content/1.index.md
@@ -9,7 +9,7 @@ title: Home
 
 I'm a developer advocate who loves to code, write, and draw, to help developers achieve more every day. 🚀
 
-I have a long history with .NET, Azure, serverless ⚡️, and event-driven architectures ✉️. These days I'm creating content around Dapr, the distributed application runtime, which allows me to explore more programming languages and cloud platforms! 🤩
+I have a long history with .NET, Azure, serverless ⚡️, and event-driven architectures ✉️. These days I'm creating content around [Dapr](https://dapr.io), the distributed application runtime, which allows me to explore more programming languages and cloud platforms! 🤩
 
 When I'm not working to improve the developer experience, I am either drawing some [pixel art](/pixelart) for fun, doing [creative coding](creative-coding) in JavaScript to create interactive visuals, or creating soundscapes with my modular synth 🎛️.
 
