--- a/content/6.about.md
+++ b/content/6.about.md
@@ -19,10 +19,11 @@ In his spare time, Marc likes to give attention to the creative part of his brai
 
 ### Connect with me on the web
 
+- [Check out my talks on Sessionize](https://sessionize.com/marcduiker) <Icon name="uil:microphone" size=24 />
 - [Follow me on Twitter](https://twitter.com/marcduiker) <Icon name="uil:twitter" size=24 />
 - [Follow me on Mastodon](https://mstdn.social/@marcduiker) <Icon name="uil:comment" size=24 />
 - [Follow me on YouTube](https://www.youtube.com/@marcduiker) <Icon name="uil:youtube" size=24 />
 - [Follow me on dev.to](https://dev.to/marcduiker) <Icon name="uil:pen" size=24 />
 - [Connect with me on LinkedIn](https://www.linkedin.com/in/mduiker/) <Icon name="uil:linkedin" size=24 />
 - [Have a look at my open source projects on GitHub](https://www.github.com/marcduiker) <Icon name="uil:github" size=24 />
-- [Sponsor my pixelart or commission me via Ko-fi](https://ko-fi.com/marcduiker) <Icon name="uil:illustration" size=24 />
+- [Sponsor my pixelart or commission me via Ko-fi](https://ko-fi.com/marcduiker) <Icon name="uil:euro" size=24 />
